--- a/recipes/chocolatecake.html
+++ b/recipes/chocolatecake.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>chocolatecake</title>
+    <link rel="stylesheet" href="recipe.css">
 </head>
 <body>
     <h1>Chococlate Cake Recipe</h1>
@@ -23,7 +24,7 @@
         <li>2 teaspoons vanilla extract</li>
         <li>1 cup (240ml) hot water</li>
     </ul>
-    <h4>Steps</h4>
+    <h4>Steppppps</h4>
     <ol>
         <li>Preheat your oven to 350°F (175°C) and grease a 9x13 inch baking pan.</li>
         <li>In a large bowl, mix together flour, sugar, cocoa powder, baking powder, baking soda, and salt.</li>
