--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="recipe.css">
     <meta charset="UTF-8">
     <title>shirowot</title>
 </head>
